fixed all errors from validation, links wrapping buttons, missing headings to sections, add class .hide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,11 @@ h3 {
     text-transform: uppercase;
 }
 
+.hidden {
+    display: none;
+}
+
+
 /*left border with colour, for section headings*/
 .left {
     border-left: 5px solid #F0CB83;
